昨天的变化

--- a/trunk/app/assets/javascripts/ktv/ktv.js.coffee.erb
+++ b/trunk/app/assets/javascripts/ktv/ktv.js.coffee.erb
@@ -281,6 +281,6 @@ jQuery ->
       $('#weizuozhefasongganxie').addClass('purple')
       $('#weizuozhefasongganxie').removeClass('like')
       $('#weizuozhefasongganxie').addClass('unlike')
-      $('#weizuozhefasongganxie').html('已感谢')
+      $('#weizuozhefasongganxie').html('已喜欢')
       $('#weizuozhefasongganxie2').html(num+1)
   )
