--- a/trunk/app/views/welcome/index.html.erb
+++ b/trunk/app/views/welcome/index.html.erb
@@ -12,7 +12,17 @@
         <p>
           <%= image_tag 'p.png',:alt => '通过课件交流系统，您可以迅速定位最感兴趣的课程，轻松获取大家共同维护的最优质的一份学习资料。然而，课件系统不仅是一个出色的学习资源交流平台，她更是一个开放的在线学习社区。在这里，您可以把遇到的难题发出来，大家共同切磋，也可以让大家为您的学习目标出谋划策。在这里，我们共同进步！' %>
         </p>
-        <p><a href="<%=new_courseware_path%>" id="loginhuge" class="button primary">立即开始上传分享课件</a></p>
+      <% if user_signed_in? %>
+        <p><a href="<%=new_courseware_path%>" id="cw_newhuge" class="button primary">立即前往上传课件</a></p>
+      <% else %>
+        <p><a href="/login" id="loginhuge" class="button primary">用微博 / 人人 / QQ账号瞬间登录</a></p>
+      <% end %>
+
+      <% content_for :butt2 do %>
+        $('#loginhuge').click(function(){
+          return KTV.login();
+        });
+      <% end %>
       </div>
       <div class="secondary_info">
         <div class="slide_frame">
@@ -21,43 +31,6 @@
       </div>
     </div>
   </section>
-  <section id="tabs">
-    <div class="wrapper">
-      <div class="main">
-        <ul>
-          <li class="current"><a href="#description">最新上传</a></li>
-        </ul>
-      </div>
-    </div>
-  </section>
-	<section class="supplimental" id="featured">
-  <div class="wrapper">
-		<div class="main" style="width:100%;margin-left:2px">
-	  <% @latest_cw.each_with_index do |item,index| %>
-    <% sz = [item.slides_count-1,50].min %>
-    <div data-slide-count="<%= sz %>" data-id="<%= item.id %>" class="presentation" style="<%='margin-right:0' if 0==(index+1)%4%>">
-        <a href="<%= courseware_path item %>" class="slide_preview scrub setup">
-      	  <% (sz).downto(1).each do |i| %>
-      		  <img style="display: none;" data-slide="<%= i %>" class="timeline" alt="第<%= i %>页" src="<%= asset_url("cw/#{item.id}/#{item.revision}thumb_slide_#{i}.jpg") %>">
-      		<% end %>
-      		<img src="<%= asset_url("cw/#{item.id}/#{item.revision}thumb_slide_0.jpg") %>" alt="Thumb_slide_0" width="210" height="158">
-      		<div class="scrubber">
-      			<div style="width: 100%;" class="scrubbed">
-      			</div>
-      		</div>  		
-        </a>
-        <div class="preview_info">
-      		<h3><a href="<%= courseware_path item %>"><%= item.title %></a></h3>
-      		<p class="date">
-      			<%= l(item.created_at, :format => :long) %>, <a href="/users/<%= User.get_slug item.user_id %>"><%= User.get_name item.user_id %></a>
-      		</p>
-        </div>
-    </div>
-
-    <% end %>
-		</div>
-	</div>
-	</section>
 </div>
 
 <%= render file:'/application/headers/_zm_header' %>
@@ -282,19 +255,7 @@ $('#categories_table > div').height($('#categories_table').height());
       $("#js-ad-show1").html(html.join(""));
 
       function statAd() {
-          var imgObj = $("#js-imgslide-1");
-          var id = imgObj.find(".imgBlock").parent("a").data("id");
-          if (id == undefined) {
-              return;
-          }
-          if (imgObj.data(id)) {
-              return;
-          }
-          imgObj.data(id, 1);
-          var uri = "http://nb.zhimei.com/nb/adstat?id=" + id + "&f=show";
-          var img = new Image(0, 0);
-          img.src = uri;
-          img.onload = function () {};
+        //todo
       };
       im(function () {
         im.zm.categoryNav({
@@ -304,7 +265,8 @@ $('#categories_table > div').height($('#categories_table').height());
             upClass: "arrowup",
             downClass: "arrow",
             top: "49px",
-            left: "-465px"
+            left: "-465px",
+            top_up: "-49px"
         });
         
         $("#js-imgslide-1").doImages({
@@ -439,7 +401,7 @@ function moveImgs(parentObj, n, w) {
 $(function () {
     moveImgs($("#js_task2"), 3, 224);
     var groupId = 1;
-    $('#recommend_refresh').live("click", function () {
+    $('#recommend_refresh').on("click", function () {
         var ulObj = "recommend_ul";
         groupId = parseInt(groupId) + 1;
         var prefix = 'http://b.imimg.cn';
@@ -467,7 +429,7 @@ $(function () {
         } catch (e) {}
     });
 });
-$("a[name='comment_refresh']").live("click", function () {
+$("a[name='comment_refresh']").on("click", function () {
     var ref = $(this).attr("ref");
     var divObj = ref + "_share_comment";
     var channelType = "";
@@ -519,7 +481,7 @@ $("a[name='comment_refresh']").live("click", function () {
         _gaq.push(['_trackPageview', "/i_" + ref + "_comment/"]);
     } catch (e) {}
 });
-$("a[name='shopping_refresh']").live("click", function () {
+$("a[name='shopping_refresh']").on("click", function () {
     var ref = $(this).attr("ref");
     var ulObj = ref + "_wishlist";
     var channelType = "";
@@ -550,7 +512,7 @@ $("a[name='shopping_refresh']").live("click", function () {
         _gaq.push(['_trackPageview', "/i_" + ref + "_shopping/"]);
     } catch (e) {}
 });
-$('#exchange_refresh').live("click", function () {
+$('#exchange_refresh').on("click", function () {
     $.get(uri("URI_INDEX_EXCHANGE_REFRESH"), function (data) {
         if (data.length) {
             $('#imJsExchange').html("");
@@ -564,7 +526,7 @@ $('#exchange_refresh').live("click", function () {
         _gaq.push(['_trackPageview', "/i_exchange/"]);
     } catch (e) {}
 });
-$('#zhimei_star_refresh').live("click", function () {
+$('#zhimei_star_refresh').on("click", function () {
     $.get(uri("URI_INDEX_ZHIMEI_STAR_REFRESH"), {except_id:'<%= @hottest_user.id %>'}, function (data) {
       $('#zhimei_star_ul').html(data);
     }, 'html');
@@ -572,7 +534,7 @@ $('#zhimei_star_refresh').live("click", function () {
         _gaq.push(['_trackPageview', "/i_zhimei_star/"]);
     } catch (e) {}
 });
-$('.hotbutton').live("click", function () {
+$('.hotbutton').on("click", function () {
     var loginUserId = <%=raw current_user ? current_user.id.to_s.to_json : 0 %>;
     var follow = $(this).attr("follow");
     var followed = $(this).attr("followed");
@@ -614,7 +576,7 @@ $('.hotbutton').live("click", function () {
 });
 var timers1 = null,
     timers2 = null;
-$(".favourite-btn").die().live("click", function () {
+$(".favourite-btn").off().on("click", function () {
     var ajaxObj = $(this);
     var boardPicId = ajaxObj.attr("to");
     if (typeof loginUser.id == "undefined" || loginUser.id == "") {
