--- a/trunk/app/views/coursewares/embed.html.erb
+++ b/trunk/app/views/coursewares/embed.html.erb
@@ -150,13 +150,16 @@ end
       },
       openFullScreen: function() {
         var elem = document.body;
-
+        
         if (elem.requestFullScreen) {
           elem.requestFullScreen();
+          $('#core_topic_name').attr('target','_blank');
         } else if (elem.mozRequestFullScreen) {
           elem.mozRequestFullScreen();
+          $('#core_topic_name').attr('target','_blank');
         } else if (elem.webkitRequestFullScreen) {
           elem.webkitRequestFullScreen();
+          $('#core_topic_name').attr('target','_blank');
         } else {
           var height = 1022 / 1.3333333333333333 + 65;
           window.open(window.location.href.split('?')[0]+'?slide='+(Slide.current+1)+'&windowed=true','popup','width=1024,height='+height);
@@ -167,10 +170,13 @@ end
       closeFullScreen: function() {
         if (document.cancelFullScreen) {
           document.cancelFullScreen();
+          $('#core_topic_name').attr('target','_parent');
         } else if (document.mozCancelFullScreen) {
           document.mozCancelFullScreen();
+          $('#core_topic_name').attr('target','_parent');
         } else if (document.webkitCancelFullScreen) {
           document.webkitCancelFullScreen();
+          $('#core_topic_name').attr('target','_parent');
         }
         return false;
       },
@@ -389,7 +395,7 @@ end
     <img alt="Kejian.TV课件交流系统" src="<%=asset_path 'embed_logo.png'%>" />
     <h5><a href="/coursewares/<%=@courseware.id%>" target="_parent"><%=@courseware.title%></a></h5>
     <a href="#" id="fullscreen">全屏</a>
-    <p>领域: <a href="/topics/<%=@courseware.topic_id%>" target="_parent"><%=@courseware.topic%></a></p>
+    <p>领域: <a id="core_topic_name" href="/topics/<%=@courseware.topic_id%>" target="_parent"><%=@courseware.topic%></a></p>
 
   </div>
   <div id="slide">
