修复姜大海提出的一个bug，然后是广告业务的开发

--- a/trunk/app/views/welcome/about.html.erb
+++ b/trunk/app/views/welcome/about.html.erb
@@ -11,7 +11,7 @@
 			<li><a  href="#xiaobin"><em>设计师</em> 吴晓斌</a></li>
 			<li><a  href="#yafei"><em>运营</em> 邱亚飞</a></li>
 			<li><a  href="#luda"><em>产品经理</em> 卢达</a></li>
-			<li><a  href="#jiayu"><em>线下业务</em> 张家雨</a></li>
+			<li><a  href="#junbo"><em>实体业务</em> 邵俊博</a></li>
 		</ul>
 	</div>
 	<div id="primary">
@@ -69,6 +69,14 @@
 			<h3>联系方式</h3>
 			<ul>
         <li class="email"><a title="Send me an email (Opens your default client)"   href="mailto:jiayu_1129@126.com">电子邮箱</a></li>
+			</ul>
+		</div>
+		<div id="junbo">
+			<h2>邵俊博 <em style="font-size:12px">实体业务</em></h2>
+			<p>首都师范大学校友. </p>
+			<h3>联系方式</h3>
+			<ul>
+        <li class="email"><a title="Send me an email (Opens your default client)"   href="mailto:shaojunbo8000@yahoo.com.cn">电子邮箱</a></li>
 			</ul>
 		</div>
 		
