--- a/trunk/app/views/coursewares/show.html.erb
+++ b/trunk/app/views/coursewares/show.html.erb
@@ -129,6 +129,19 @@ KTV.data = {
       <ul class="delimited share">
         <li class="download"><%=Courseware::SORTSTR[@courseware.sort]%>(<%=@courseware.down_pdf_size ? number_to_human_size(@courseware.down_pdf_size*1000,:precision=>1) : '大小未知' %>)<a target="_blank" href="<%= download_courseware_path(@courseware)%>">立即下载</a></li>
       </ul>
+      <h6><%=image_tag('peixun2.png',alt:'相关线下培训',style:'margin-top:28px')%></h6>
+<div class="ad">
+  <p>
+    <a href="http://www.universaltraining.cn/peixun/programming/2010-01/3.html">
+      <img alt="Ruby认证程序员课程（Ruby Association Certified Ruby Programmer Silver）" src="<%=asset_path 'ad1.png'%>">
+    </a>
+  </p>
+  <p>
+    <a href="http://www.universaltraining.cn/peixun/programming/2010-01/3.html">
+环球培训(UniversalTraining)提供Ruby认证程序员课程.
+    </a>
+  </p>
+</div>
     </div>
   </div>
   <% end %>
