原作者与广告

--- a/trunk/app/assets/stylesheets/ktv/overwritting.css.scss.erb
+++ b/trunk/app/assets/stylesheets/ktv/overwritting.css.scss.erb
@@ -94,4 +94,13 @@ background-position:0 -145px;
 
 .__zm .dialog3 .dia-psvr li{
   width:282px;
+
 }
+#doc_ad{
+  display:block;
+  width:438;
+  height:80px;
+  margin-bottom:5px;
+  cursor:pointer;
+}
+
