--- a/trunk/app/views/users/show.html.erb
+++ b/trunk/app/views/users/show.html.erb
@@ -195,7 +195,7 @@ function queryExec(){
         loadingID: "imloading",
 
         callBack: function () {
-        var showContent = "<%=@user.name%>还没有发布课件";
+        var showContent = "<%=@user.name%>还没有上传课件";
 
             $("#contentMain").prepend('<div style="text-align: center; margin-right: 233px; padding-top: 100px; left: 0px; top: 0px;" class="f14" columns="0">' + showContent + '</div>');
         }
