--- a/trunk/app/assets/javascripts/ktv/ie/application.js.erb
+++ b/trunk/app/assets/javascripts/ktv/ie/application.js.erb
@@ -12,6 +12,7 @@
 //
 //= require jquery
 //= require jquery_ujs
+//= require jquery.placeholder
 //= require jquery.zclip
 //= require jquery.timeago
 //= require jquery.timeago.settings
