--- a/trunk/app/views/application/_presenter.html.erb
+++ b/trunk/app/views/application/_presenter.html.erb
@@ -1,4 +1,4 @@
-<div class="presenter">
+<div class="presenter" style="<%= defined?(style) ? style : '' %>">
   <a href="<%=user_path(user)%>"><%= avatar_tag(user,:small47) %></a>
   <h2><a href="<%=user_path(user)%>"><%=user.name%></a></h2>
   <p><%=user.tagline.present? ? user.tagline : "#{user.coursewares_count} 个课件" %></p>
