--- a/trunk/app/views/topics/show.html.erb
+++ b/trunk/app/views/topics/show.html.erb
@@ -203,7 +203,7 @@ function queryExec(){
         loadingID: "imloading",
 
         callBack: function () {
-        var showContent = "这个领域下还没有课件，<a href=\"/coursewares/new\">发布一个</a>吧：）";
+        var showContent = "这个领域下还没有课件，<a href=\"/coursewares/new\">上传一个</a>吧：）";
 
             $("#contentMain").prepend('<div style="text-align: center; margin-right: 233px; padding-top: 100px; left: 0px; top: 0px;" class="f14" columns="0">' + showContent + '</div>');
         }
