oauth 都可以用了

--- a/trunk/app/views/coursewares/show.html.erb
+++ b/trunk/app/views/coursewares/show.html.erb
@@ -97,7 +97,7 @@ KTV.data = {
         </p>
         <p>
           <a href="http://vip.kuakao.com/mg/" target="_blank">
-跨考教育提供全日制住宿式2013年考研魔鬼训练营(国内首家).
+跨考教育提供全日制住宿式2013年考研魔鬼训练营.
           </a>
         </p>
       </div>
