--- a/simple/simple/template/default/search/header.htm
+++ b/simple/simple/template/default/search/header.htm
@@ -9,20 +9,29 @@
   <div id="header0">
     <div class="">
       <div class="" id="slab1">
-        <img src="psvr/assets/header0_1.png">
-        <a href="/?force_main=1">Kejian.TV主站</a>
+        <img src="psvr/assets/header0_1.png" alt="">
+        <a href="http://kejian.tv/?force_main=1">Kejian.TV主站</a>
       </div>
       <div id="slab2">
-        <img src="psvr/assets/header0_2.png" style="opacity: 0.7;">
-        <a href="/simple">目录检索区</a>
+        <img src="psvr/assets/header0_2.png" alt="">
+        <a href="http://kejian.tv/simple">目录检索区</a>
       </div>
-      <script>
-        console.log('<?php echo 'search'===CURSCRIPT; ?>');
-      </script>
       <div class="active" id="slab3">
-        <img src="psvr/assets/header0_3.png" style="opacity: 0.7;">
+        <img src="psvr/assets/header0_3.png" alt="">
         <a href="http://search.kejian.tv/">搜索区</a>
       </div>
+      
+      <div id="header0btn" style="margin-right:4px">
+
+      </div>
+      <div class="spliter">
+      </div>
+      <div class="profile" id="slab_profile">
+        <img src="psvr/assets/header0profile.png" alt="">
+      </div>
+      <div class="spliter">
+      </div>
+
     </div>
   </div>
 	<div id="append_parent"></div><div id="ajaxwaitid"></div>
