--- a/trunk/app/assets/stylesheets/ktv/application.css.scss.erb
+++ b/trunk/app/assets/stylesheets/ktv/application.css.scss.erb
@@ -2,6 +2,7 @@
  *= require_self
  *= require ./__sdk
  *= require ./__zm
+ *= require ./__old
  *= require ./__qua
  *= require ./overwritting
  */
