--- a/simple/simple/template/default/common/header.htm
+++ b/simple/simple/template/default/common/header.htm
@@ -61,20 +61,29 @@
     <div id="header0">
       <div class="wp">
         <div class="" id="slab1">
-          <img src="psvr/assets/header0_1.png">
-          <a href="/?force_main=1">Kejian.TV主站</a>
+          <img src="psvr/assets/header0_1.png" alt="">
+          <a href="http://kejian.tv/?force_main=1">Kejian.TV主站</a>
         </div>
         <div class="active" id="slab2">
-          <img src="psvr/assets/header0_2.png" style="opacity: 0.7;">
-          <a href="/simple">目录检索区</a>
+          <img src="psvr/assets/header0_2.png" alt="">
+          <a href="http://kejian.tv/simple">目录检索区</a>
         </div>
-        <script>
-          console.log('<?php echo 'search'===CURSCRIPT; ?>');
-        </script>
         <div id="slab3">
-          <img src="psvr/assets/header0_3.png" style="opacity: 0.7;">
+          <img src="psvr/assets/header0_3.png" alt="">
           <a href="http://search.kejian.tv/">搜索区</a>
         </div>
+        
+        <div id="header0btn">
+
+        </div>
+        <div class="spliter">
+        </div>
+        <div class="profile" id="slab_profile">
+          <img src="psvr/assets/header0profile.png" alt="">
+        </div>
+        <div class="spliter">
+        </div>
+
       </div>
     </div>
 
