--- a/trunk/app/views/layouts/application_ie.html.erb
+++ b/trunk/app/views/layouts/application_ie.html.erb
@@ -15,6 +15,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body class="<%= @simple_layout ? 'simple_layout' : '' %> <%= @is_ie ? 'is_ie' : ''%>" id="<%= pos_signature %>">
+<%= render 'header0' %>
 <% if @simple_layout %>
   <div id="simple_layouter">
     <%= yield %>
