浏览器提示页面和页头改进|吃饭去咯

--- a/trunk/app/assets/stylesheets/ktv/__old.css.scss.erb
+++ b/trunk/app/assets/stylesheets/ktv/__old.css.scss.erb
@@ -55,21 +55,21 @@
     outline: none;
   }
   .btn301{
-    background:url(<%=asset_path 'ktv_regbtn.png'%>);
+    background:url(<%=asset_path 'ie/ktv_regbtn.png'%>);
     width:301px;  
   }
   .btn210{
-    background:url(<%=asset_path 'btn210.png'%>);
+    background:url(<%=asset_path 'ie/btn210.png'%>);
     width:210px;
   }
   .btn210_grey{
-    background:url(<%=asset_path 'btn210_grey.png'%>);
+    background:url(<%=asset_path 'ie/btn210_grey.png'%>);
     width:210px;
   }
   /*global tags*/
   body{
     color: #999;
-    background: #333 url(<%=asset_path('grey.jpg')%>);
+    background: #333 url(<%=asset_path('ie/grey.jpg')%>);
     -webkit-font-smoothing: antialiased;
     font: 15px "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
@@ -93,11 +93,11 @@
       background-color:transparent;
     }
     input.s462{
-      background-image: url(<%=asset_path 'input462.png'%>);
+      background-image: url(<%=asset_path 'ie/input462.png'%>);
       width:462px;
     }
     input.s212{
-      background-image: url(<%=asset_path 'input212.png'%>);
+      background-image: url(<%=asset_path 'ie/input212.png'%>);
       width:212px;
     }
     input:focus{
@@ -121,7 +121,7 @@
   }
   /*Sky.1  #header ------------------------------------------------*/
   #header0{
-    background: #424242 url(<%=asset_path('header0.png')%>) repeat-x;
+    background: #424242 url(<%=asset_path('ie/header0.png')%>) repeat-x;
     width:100%;
     height:40px;
     font-family:"HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -159,14 +159,14 @@
       float:right;
     }
     .spliter{
-      background: transparent url(<%= asset_path('header0spliter.png') %>) no-repeat;
+      background: transparent url(<%= asset_path('ie/header0spliter.png') %>) no-repeat;
       width:2px;
       height:40px;
       float:right;
     }
     #header0btn{
       float:right;
-      background: #4A9CD6 url(<%= asset_path('header0btn.png') %>) no-repeat;
+      background: #4A9CD6 url(<%= asset_path('ie/header0btn.png') %>) no-repeat;
       width:40px;
       height:30px;
       margin:4px 0 0 11px;
@@ -189,7 +189,7 @@
       color:#FFF;
     }
     #slab1.active{
-      background: #222 url(<%= asset_path('header0_1active.png') %>) no-repeat;
+      background: #222 url(<%= asset_path('ie/header0_1active.png') %>) no-repeat;
     }
     #slab2{
       width:111px;
@@ -197,7 +197,7 @@
       float:left;
     }
     #slab2.active{
-      background: #222 url(<%= asset_path('header0_2active.png') %>) no-repeat;
+      background: #222 url(<%= asset_path('ie/header0_2active.png') %>) no-repeat;
     }
     #slab3{
       width:83px;
@@ -211,12 +211,12 @@
       }
     }
     #slab3.active{
-      background: #222 url(<%= asset_path('header0_3active.png') %>) no-repeat;
+      background: #222 url(<%= asset_path('ie/header0_3active.png') %>) no-repeat;
     }
 
   }
   #header{
-    background: #1E1E1E url(<%=asset_path("dark.jpg")%>) repeat-x;
+    background: #1E1E1E url(<%=asset_path("ie/dark.jpg")%>) repeat-x;
     height: 130px;
     border-bottom:1px solid #2d2d2d;
   }
@@ -229,7 +229,7 @@
     	border-bottom:1px solid #222;
     }
     #headnav a{
-    	background: url(<%=asset_path("sprites2.png")%>) 0 0 no-repeat;
+    	background: url(<%=asset_path("ie/sprites2.png")%>) 0 0 no-repeat;
     	display:block;
     	padding: 8px 0 3px 45px;
     	color:#fff;
@@ -287,7 +287,7 @@
       }
       #searchbox {
         position: absolute;
-        background: url(<%=asset_path("searchbox.png")%>) no-repeat;
+        background: url(<%=asset_path("ie/searchbox.png")%>) no-repeat;
         width:250px;height:47px;
         margin: -4px 0 0 188px;
       }
@@ -330,11 +330,11 @@
   #skyline{
     padding:25px 10px;
     color:#88D2AD;
-    background:url(<%=asset_path("grey.jpg")%>);
+    background:url(<%=asset_path("ie/grey.jpg")%>);
   }
   /*3. Ground*/
   #main{
-    background: #E4E4E4 url(<%=asset_path('white.png')%>);
+    background: #E4E4E4 url(<%=asset_path('ie/white.png')%>);
   }
   div.acquired {
     text-align:center;
