--- a/trunk/app/assets/stylesheets/ktv/ie/main.css.scss.erb
+++ b/trunk/app/assets/stylesheets/ktv/ie/main.css.scss.erb
@@ -1,3 +1,6 @@
+a{
+  text-decoration:none;
+}
 /*
 Kejian.TV
 Crafted by P.S.V.R
@@ -66,7 +69,7 @@ With IE 6,7,8 compatibility in mind
 body{
   color: #999;
   background: #333 url(<%=asset_path('ie/grey.jpg')%>);
-  -webkit-font-smoothing: subpixel-antialiased; /* antialiased*/
+  -webkit-font-smoothing: antialiased;
   font: 15px "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
@@ -113,7 +116,7 @@ form.normal{
   #regerror_password,#regerror_password_confirmation{
     max-width:167px;
   }
-  
+
 }
 /*Sky.1  #header ------------------------------------------------*/
 #header0{
@@ -136,6 +139,7 @@ form.normal{
     }
   }
   img{
+    opacity: 0.7;
     position:absolute;
     margin-left:12px;
     margin-top:9px;
@@ -165,11 +169,23 @@ form.normal{
     width:40px;
     height:30px;
     margin:4px 0 0 11px;
+    &:hover{
+      background-position:0 -30px;
+    }
+    &:active{
+      background-position:0 -60px;
+    }
   }
   #slab1{
     width:129px;
     height:40px;
     float:left;
+  }
+  #slab1:hover img, #slab2:hover img, #slab3:hover img, #slab_profile:hover img{
+    opacity: 1;
+  }
+  #slab1:hover a, #slab2:hover a, #slab3:hover a, #slab_profile:hover a{
+    color:#FFF;
   }
   #slab1.active{
     background: #222 url(<%= asset_path('ie/header0_1active.png') %>) no-repeat;
@@ -184,7 +200,7 @@ form.normal{
   }
   #slab3{
     width:83px;
-    height:41px;
+    height:40px;
     float:left;
     img{
       margin-top:10px;
@@ -196,12 +212,11 @@ form.normal{
   #slab3.active{
     background: #222 url(<%= asset_path('ie/header0_3active.png') %>) no-repeat;
   }
-  
+
 }
 #header{
-  background: #1E1E1E url(<%=asset_path("ie/dark.png")%>) repeat-x;
-  height: 50px;
-  padding-top:15px;
+  background: #1E1E1E url(<%=asset_path("ie/dark.jpg")%>) repeat-x;
+  height: 130px;
   border-bottom:1px solid #2d2d2d;
 }
   /*Sky.1.1 #headnav ------------------------------------------*/
@@ -250,7 +265,7 @@ form.normal{
   #headnav div.second_selected a{background-position: -1040px -44px;}
   #headnav div.third_selected a{background-position: -1298px -44px;}
   #headnav div.fourth_selected a{background-position: -780px -44px;}
-  
+
   #headnav_content div.selected a{
     color: #FFDD33;
     opacity: 1;
@@ -259,6 +274,7 @@ form.normal{
   /*Sky.1.2 #logodiv ------------------------------------------*/
   /*logoabsdiv*/
   #logoabsdiv{
+    margin-top:25px;
   }
     #logolink{
       position: absolute;
@@ -291,7 +307,7 @@ form.normal{
       -webkit-transition: background, color 0.2s linear;
       -moz-transition: background, color 0.2s linear;
       transition: background, color 0.2s linear;
-      -webkit-font-smoothing: subpixel-antialiased; /* antialiased*/
+      -webkit-font-smoothing: antialiased;
     }
     #loginbox{
       position: absolute;
@@ -308,7 +324,7 @@ form.normal{
     }
     #login{}
     #register{margin-left:10px;}
-      
+
 /*SkyLine.2  #skyline ------------------------------------------------*/
 #skyline{
   padding:25px 10px;
