--- a/trunk/app/views/layouts/application_ie.html.erb
+++ b/trunk/app/views/layouts/application_ie.html.erb
@@ -30,6 +30,7 @@
       </div>
     <% end %>
   <% end %>
+  <% unless @application_ie_noheader %>
   <header id="header">
     <div id="logoabsdiv">
       <div class="w960">
@@ -39,6 +40,7 @@
       </div>
     </div>
   </header>
+  <% end %>
   <div role="main" id="main">
     <%= yield %>
   </div>
@@ -52,6 +54,7 @@
 <script type="text/javascript" charset="utf-8">
   $(document).ready(function(){
     <%= yield :butt2 %>
+    App.headnav_css();
   });
 </script>
 <%= render 'analytics' if Rails.env.production? %>
