--- a/simple/simple/template/default/common/header.htm
+++ b/simple/simple/template/default/common/header.htm
@@ -76,7 +76,7 @@
         <!--{else}-->
         <div class="" id="slab1">
           <img src="psvr/assets/header0_1.png" alt="">
-          <a href="http://kejian./?force_main=1">Kejian.TV主站</a>
+          <a href="http://kejian.tv/?force_main=1">Kejian.TV主站</a>
         </div>
         <div class="active" id="slab2">
           <img src="psvr/assets/header0_2.png" alt="">
