--- a/trunk/app/views/coursewares/show.html.erb
+++ b/trunk/app/views/coursewares/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :armpit do %>
-<%= stylesheet_link_tag 'ktv/__ytb' %>
+<%# stylesheet_link_tag 'ktv/__ytb' %>
 <% end %>
 <% content_for :butt2 do %>
 KTV.data = {
@@ -111,7 +111,7 @@ KTV.data = {
         <div class="slide_frame" id="slides_container">
 
 <% case @courseware.sort.to_sym %>
-<% when :ppt,:pdf %>
+<% when :ppt,:pptx,:doc,:docx,:pdf %>
           <script async="async" class="speakerdeck-embed" data-course-slug="<%=@courseware.topic_id%>" data-courseware-slug="<%=@courseware.id%>" data-ratio="<%= @courseware.wh_ratio %>" src="<%=asset_path 'ktv/embed.js'%>" type="text/javascript"></script>
 <% when :webm %>
       <img src="/tmp1.png">
@@ -196,7 +196,7 @@ KTV.data = {
 
 </div>
 
-<div class="__ytb">
+<div class="__ytb" style="display:none">
   <div id="watch-main-container" style="padding-top:20px">
       <div id="watch-main">
         <div id="watch-panel">
