--- a/trunk/app/views/welcome/index__cnu.html.erb
+++ b/trunk/app/views/welcome/index__cnu.html.erb
@@ -11,7 +11,7 @@
 	<frameset cols="150,8,*" border="0" framespacing="0" frameborder="0" id="op_frame">
 		<frame scrolling="Auto" noresize="" framespacing="0" border="0" frameborder="NO" name="menuFrame" src="/welcome/menu"></frame>
 		<frame scrolling="no" framespacing="0" border="0" frameborder="NO" noresize="" name="barFrame" src="/welcome/xi"></frame>
-		<frame scrolling="Auto" framespacing="0" border="0" frameborder="NO" name="mainFrame" src="http://192.168.145.253/welcome/main"></frame>
+		<frame scrolling="Auto" framespacing="0" border="0" frameborder="NO" name="mainFrame" src="/simple/"></frame>
 	</frameset>
 
 </frameset>
