个性域名->用户名，301->302，开始调试PHP->KTV

--- a/trunk/app/views/apidoc/user_show_asked.html.erb
+++ b/trunk/app/views/apidoc/user_show_asked.html.erb
@@ -29,7 +29,7 @@ http://api.kejian.tv/users/angelacai/asked?client_id=4f97b5f9d1212f1d7e000002
        { id: '4ed33d92062a787287002800', title: '在Kejian.TV，什么是“添加评论”？', user: [Object], answers_count: 1 },
        { id: '4ed33d6bd1212f2682000062', title: '在Kejian.TV上解答题时，应该注意什么？', user: [Object], answers_count: 1 },
        { id: '4ed33d53d1212f268200005d', title: '在Kejian.TV，如何向指定专家提问？', user: [Object], answers_count: 1 },
-       { id: '4ed33cf8062a7872870027f6', title: 'Kejian.TV用户，如何修改自己的个性域名？', user: [Object], answers_count: 1 },
+       { id: '4ed33cf8062a7872870027f6', title: 'Kejian.TV用户，如何修改自己的用户名？', user: [Object], answers_count: 1 },
        { id: '4ed33ce1d1212f269a00005c', title: 'Kejian.TV用户，如何修改自己的昵称？', user: [Object], answers_count: 1 },
        { id: '4ed33c8d062a78727b0027e0', title: 'Kejian.TV用户，如何上传和修改个人头像？', user: [Object], answers_count: 1 },
        { id: '4ed33c63d1212f269a000057', title: 'Kejian.TV用户，注册/登录邮箱可以更改吗？', user: [Object], answers_count: 1 },
