--- a/trunk/app/views/coursewares/new.html.erb
+++ b/trunk/app/views/coursewares/new.html.erb
@@ -13,7 +13,7 @@
           否则，请选用下述三种标题格式标注原作者：<br />
           1、[学校名] 作者姓名: 课件名<br />
           2、@作者姓名: 课件名<br />
-          3、@已注册用户的个性域名: 课件名
+          3、@已注册用户的用户名: 课件名
 
 </p>
 
