--- a/trunk/app/views/devise/registrations/edit__cnu.html.erb
+++ b/trunk/app/views/devise/registrations/edit__cnu.html.erb
@@ -46,7 +46,7 @@
         </div>
         </dt>
 
-        <dt>个性域名：<span class="fc999 hide" >http://kejian.tv/</span></dt>
+        <dt>用户名：<span class="fc999 hide" >http://kejian.tv/</span></dt>
         <dd>http://kejian.tv/<input type="text" value="<%=resource.slug%>" size="220" required="required" name="user[slug]" maxlength="20" id="user_slug" class="string required" /></dd>
         <dt>修改头像：</dt>
         <dd>
