--- a/trunk/app/views/apidoc/topics_get_suggest_topics.html.erb
+++ b/trunk/app/views/apidoc/topics_get_suggest_topics.html.erb
@@ -223,7 +223,7 @@ http://api.kejian.tv/topics/职业规划/suggest_topics?client_id=4f97b5f9d1212f
     '登录Kejian.TV',
     '注册Kejian.TV',
     '修改',
-    '个性域名',
+    '用户名',
     '添加评论',
     '领域',
     '大学生',
