--- a/trunk/app/views/apidoc/user_show_answered.html.erb
+++ b/trunk/app/views/apidoc/user_show_answered.html.erb
@@ -242,7 +242,7 @@ http://api.kejian.tv/users/angelacai/answered?client_id=4f97b5f9d1212f1d7e000002
          votes: [Object] },
        { _id: '4ed33d32d1212f269a000063',
          ask_id: '4ed33cf8062a7872870027f6',
-         body: '<div>第一次登录时，不要求填写个性域名，系统将自动帮你设置个性域名。</div><div>在“设置”页面，可进行修改。</div><div><br></div>',
+         body: '<div>第一次登录时，不要求填写用户名，系统将自动帮你设置用户名。</div><div>在“设置”页面，可进行修改。</div><div><br></div>',
          comments_count: 0,
          created_at: '2011-11-28T15:50:10+08:00',
          deleted: 0,
