实现disuz->ktv单方面同步登陆

--- a/simple/simple/template/default/common/header.htm
+++ b/simple/simple/template/default/common/header.htm
@@ -60,7 +60,7 @@
 
     <div id="header0">
       <div class="wp">
-        <!--{if (substr($_SERVER['SERVER_NAME'],-6) === 'lvh.me') }-->
+        <!--{if (PSVR_IN_DEV) }-->
         <div class="" id="slab1">
           <img src="psvr/assets/header0_1.png" alt="">
           <a href="http://kejian.lvh.me/?force_main=1">Kejian.TV主站</a>
