--- a/simple/simple/template/default/search/header.htm
+++ b/simple/simple/template/default/search/header.htm
@@ -8,7 +8,7 @@
 <body id="nv_search" onkeydown="if(event.keyCode==27) return false;">
   <div id="header0">
     <div class="">
-      <!--{if (substr($_SERVER['SERVER_NAME'],-6) === 'lvh.me') }-->
+      <!--{if (PSVR_IN_DEV) }-->
       <div class="" id="slab1">
         <img src="psvr/assets/header0_1.png" alt="">
         <a href="http://kejian.lvh.me/?force_main=1">Kejian.TV主站</a>
