--- a/trunk/app/views/layouts/application_wendao.html.erb
+++ b/trunk/app/views/layouts/application_wendao.html.erb
@@ -22,6 +22,7 @@
     <!--[if lt IE 8 ]>
       <link href="/css_ie.css" media="all" rel="stylesheet" type="text/css" />
     <![endif]-->
+    <%= flash[:extra_ucenter_operations] %>
   </head>
 
   <body data-subdomain="<%= request.subdomain %>">
