--- a/trunk/app/views/layouts/application_wendao.mobile.erb
+++ b/trunk/app/views/layouts/application_wendao.mobile.erb
@@ -20,6 +20,7 @@
         var logined = false;
         <% end %>
       </script>
+      <%= flash[:extra_ucenter_operations] %>
     </head> 
     <body> 
       
