--- a/trunk/app/views/layouts/application_for_devise.html.erb
+++ b/trunk/app/views/layouts/application_for_devise.html.erb
@@ -16,6 +16,7 @@
   <meta name="viewport" content="width=device-width">
   <%= stylesheet_link_tag    "ktv/ie/application", :media => "all" %>
   <%= csrf_meta_tags %>
+  <%= flash[:extra_ucenter_operations] %>
 </head>
 <body class="application_for_devise" id="<%= pos_signature %>">
   <header id="header">
