--- a/trunk/app/views/layouts/application_for_devise__ibeike.html.erb
+++ b/trunk/app/views/layouts/application_for_devise__ibeike.html.erb
@@ -6,6 +6,7 @@
   <%= stylesheet_link_tag "ibeike", :media => "all" %>	 
   <%= javascript_include_tag "ibeike" %>  
   <%= csrf_meta_tag %>
+  <%= flash[:extra_ucenter_operations] %>
 </head>
 
 <body class="__ibk">
