--- a/trunk/app/views/layouts/application.html.erb
+++ b/trunk/app/views/layouts/application.html.erb
@@ -117,8 +117,8 @@
             <li><a class="user" href="<%= user_path(current_user) %>"><%= avatar_tag(current_user,:small47) %><%= current_user.name %></a>
               <ul>
                 <li><a href="<%= invite_users_path %>">邀请好友注册</a></li>
+                <li><a href="<%= mine_path %>">课件管理</a></li>
                 <li><a href="<%= edit_user_registration_path %>">账号设置</a></li>
-                <li><a href="#" id="Intercom">意见反馈</a></li>
                 <li><a href="<%= logout_path %>">退出</a></li>
               </ul>
             </li>
@@ -326,7 +326,6 @@
   <!-- end scripts -->
 
   <%= render 'analytics' if Rails.env.production? %>
-  <%= render 'intercom' if Rails.env.production? %>
 
 </body>
 </html>
