--- a/trunk/app/assets/stylesheets/ktv/ie/application_for_devise.css.scss.erb
+++ b/trunk/app/assets/stylesheets/ktv/ie/application_for_devise.css.scss.erb
@@ -11,7 +11,52 @@
   div.field{
     margin-bottom: 23px;
   }
-  
+  .form_sections{
+      display:inline;      
+      .tip{
+            width:350px;
+            float:right;
+            margin-top:-50px;
+      }
+ 
+  .upload {
+    width: 80px;
+  	height: 24px;
+  	background: #7abcff;
+  	background: -moz-linear-gradient(top,  #7abcff 0%, #60abf8 44%, #4096ee 100%);
+  	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7abcff), color-stop(44%,#60abf8), color-stop(100%,#4096ee));
+  	background: -webkit-linear-gradient(top,  #7abcff 0%,#60abf8 44%,#4096ee 100%);
+  	background: -o-linear-gradient(top,  #7abcff 0%,#60abf8 44%,#4096ee 100%);
+  	background: -ms-linear-gradient(top,  #7abcff 0%,#60abf8 44%,#4096ee 100%);
+  	background: linear-gradient(top,  #7abcff 0%,#60abf8 44%,#4096ee 100%);
+  	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7abcff', endColorstr='#4096ee',GradientType=0 );
+
+  	-webkit-border-radius: 5px;
+  	-webkit-border-radius: 5px;
+  	-moz-border-radius: 5px;
+  	-moz-border-radius: 5px;
+  	border-radius: 5px;
+  	border-radius: 5px;
+
+    position:relative;
+  	overflow: hidden;
+  	cursor: pointer;
+  	font-weight: bold;
+  	color: #FFF;
+  	text-align: center;
+  	padding: 12px 15px 12px 12px;
+  	
+  }
+  .file_uploader {
+      position: absolute;
+      left: 0;
+      top: 0;
+      font-size: 90px;
+      opacity: 0;
+      filter: alpha(opacity=0);
+      cursor: pointer;
+    }   
+  }
   footer {
     border-top: 1px solid #687668;
     color: #aaa;
