总目录相关脚本以及production->development以便容纳staging

--- a/trunk/app/views/application/_header0.html.erb
+++ b/trunk/app/views/application/_header0.html.erb
@@ -7,7 +7,7 @@
       </div>
       <div id="slab2" class="">
         <img src="<%= asset_path('ie/header0_2.png') %>" />
-        <a href="http://<%= Setting.ktv_domain %>/simple">目录检索区</a>
+        <a href="http://<%= Setting.ktv_simple_domain %>">目录检索区</a>
       </div>
       <div id="slab3" class="">
         <img src="<%= asset_path('ie/header0_3.png') %>"/>
