--- a/trunk/app/views/layouts/application_for_devise.html.erb
+++ b/trunk/app/views/layouts/application_for_devise.html.erb
@@ -73,7 +73,7 @@
     $("abbr.timeago").timeago();
   });
   </script>
-  <%= render 'analytics' if Rails.env.production? %>
+  <%= render 'analytics' unless Rails.env.development? %>
 </body>
 </html>
 
