--- a/trunk/app/views/layouts/application_ie.html.erb
+++ b/trunk/app/views/layouts/application_ie.html.erb
@@ -58,6 +58,6 @@
     App.headnav_css();
   });
 </script>
-<%= render 'analytics' if Rails.env.production? %>
+<%= render 'analytics' unless Rails.env.development? %>
 </body>
 </html>
