--- a/sub/app/assets/stylesheets/application.css
+++ b/sub/app/assets/stylesheets/application.css
@@ -8,6 +8,17 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+ *= require ./extand
  *= require_self
- *= require_tree .
  */
+
+.bgimg { border:0px; width:100%; height:100%;}
+.bgscroll{
+width:100%;
+height:100%;
+z-index:-1;
+position:fixed;
+_position:absolute;
+right:0px;
+clip:rect(0 100% 100% 0);
+}
