--- a/sub/app/views/layouts/application.html.erb
+++ b/sub/app/views/layouts/application.html.erb
@@ -1,14 +1,25 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Fjkdlkj</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+<meta http-equiv="Content-Type" content="text/html; charset=gbk" />
+<title>首都师范大学课件交流系统 - <%= @seo[:title] %></title>
+<meta name="keywords" content="<%= @seo[:title] %>" />
+<meta name="description" content="<%= @seo[:title] %> " />
+<meta name="author" content="Kejian.TV" />
+<meta name="copyright" content="<%= Time.now.year %> Kejian.TV Ltd." />
+<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
+<%= stylesheet_link_tag    "application", :media => "all" %>
+<%= csrf_meta_tags %>
 </head>
+
 <body>
-
 <%= yield %>
-
+<%= javascript_include_tag "application" %>
+<script type="text/javascript" charset="utf-8">
+  jQuery(function(){
+    <%= yield :butt2 %>
+  });
+</script>
+<%= yield :butt %>
 </body>
 </html>
